More basic stuff

--- a/demo/app.component.html
+++ b/demo/app.component.html
@@ -1,1 +1,6 @@
-yrdy
+<h1>ng-vcl Demo</h1>
+<nav>
+  <a [routerLink]="['/']">Home</a>
+  <a [routerLink]="['/icon']">Icon</a>
+</nav>
+<router-outlet></router-outlet>
