--- a/demo/app.component.html
+++ b/demo/app.component.html
@@ -2,5 +2,6 @@
 <nav>
   <a [routerLink]="['/']">Home</a>
   <a [routerLink]="['/icon']">Icon</a>
+  <a [routerLink]="['/icogram']">Icogram</a>
 </nav>
 <router-outlet></router-outlet>
