--- a/demo/components/icon/icon.component.html
+++ b/demo/components/icon/icon.component.html
@@ -1,5 +1,5 @@
 Icon provider based (with icon from the <i>Font Awesome</i> icon font):
-<vcl-icon [icon]="'fa:cog'"></vcl-icon>
+<vcl-icon iconClass="vclIconSize2" icon="fa:cog"></vcl-icon>
 
 <br><br>
 
