--- a/src/components/icon/icon.component.html
+++ b/src/components/icon/icon.component.html
@@ -1,4 +1,4 @@
-<span class="vclIcon {{class}} {{fontIconClass}}">
+<span class="vclIcon {{iconClass}} {{fontIconClass}}">
   <ng-content></ng-content>
   <img *ngIf="src" src="{{src}}">  
   <svg *ngIf="svguse" viewBox="0 0 100 100" preserveAspectRatio="xMidYMid meet">
