--- a/demo/app.component.html
+++ b/demo/app.component.html
@@ -3,5 +3,6 @@
   <a [routerLink]="['/']">Home</a>
   <a [routerLink]="['/icon']">Icon</a>
   <a [routerLink]="['/icogram']">Icogram</a>
+  <a [routerLink]="['/button']">Button</a>
 </nav>
 <router-outlet></router-outlet>
