Layer - basic version

--- a/demo/app.component.html
+++ b/demo/app.component.html
@@ -4,5 +4,6 @@
   <a [routerLink]="['/icon']">Icon</a>
   <a [routerLink]="['/icogram']">Icogram</a>
   <a [routerLink]="['/button']">Button</a>
+  <a [routerLink]="['/layer']">Layer</a>
 </nav>
 <router-outlet></router-outlet>
