--- a/src/components/layer/layer.component.html
+++ b/src/components/layer/layer.component.html
@@ -1,4 +1,4 @@
-<div class="vclLayer" role="dialog">
+<div *ngIf="open" class="vclLayer" role="dialog" [style.z-index]="zIndex">
   <ng-content></ng-content>
 </div>
-<div class="vclLayerCover"></div>
+<div *ngIf="open && modal" class="vclLayerCover" [style.zIndex]="coverZIndex"></div>
