--- a/demo/app.component.html
+++ b/demo/app.component.html
@@ -5,5 +5,6 @@
   <a [routerLink]="['/icogram']">Icogram</a>
   <a [routerLink]="['/button']">Button</a>
   <a [routerLink]="['/layer']">Layer</a>
+  <a [routerLink]="['/tether']">Tether</a>
 </nav>
 <router-outlet></router-outlet>
