Introduced class and zIndex support for vcl-tether

--- a/demo/components/tether/tether.component.html
+++ b/demo/components/tether/tether.component.html
@@ -1,4 +1,4 @@
-<vcl-tether target='#target' targetAttachment='bottom right' attachment='top left'>
+<vcl-tether target='#target' targetAttachment='bottom right' attachment='top left' class='tethercontainer' zIndex='7'>
   <div style="border: 1px solid red; padding: 20px; ">
     tether text goes here
   </div>
