--- a/demo/app.component.html
+++ b/demo/app.component.html
@@ -6,5 +6,6 @@
   <a [routerLink]="['/button']">Button</a>
   <a [routerLink]="['/layer']">Layer</a>
   <a [routerLink]="['/tether']">Tether</a>
+  <a [routerLink]="['/popover']">Popover</a>
 </nav>
 <router-outlet></router-outlet>
