--- a/demo/components/icogram/icogram.component.html
+++ b/demo/components/icogram/icogram.component.html
@@ -1,11 +1,11 @@
-<vcl-icogram label="some label"></vcl-icogram>
+<vcl-icogram label="foo"></vcl-icogram>
 <br><br>
 <vcl-icogram label="prep/app icons" prepIcon="fa:chevron-right" appIcon="fa:chevron-right"></vcl-icogram>
 <br><br>
 <vcl-icogram label="flexed label" appIcon="fa:chevron-right" flexLabel=true class="vclLayoutHorizontal"></vcl-icogram>
 <br><br>
 <vcl-icogram>
-  <vcl-icon class="fa:cog" label="settings" hidden="false"></vcl-icon>
+  <vcl-icon icon="fa:cog" [label]="'settings'" hidden="false"></vcl-icon>
 </vcl-icogram>
 <br><br>
 <vcl-icogram>
