--- a/src/components/popover/popover.component.html
+++ b/src/components/popover/popover.component.html
@@ -5,5 +5,7 @@
   [target]="target"
   [targetAttachment]="targetAttachment"
   [attachment]="attachment">
-  <ng-content></ng-content>
+  <div [ngStyle]="style">
+    <ng-content></ng-content>
+  </div>
 </vcl-tether>
