Background layer for popover

--- a/src/components/popover/popover.component.html
+++ b/src/components/popover/popover.component.html
@@ -9,3 +9,4 @@
     <ng-content></ng-content>
   </div>
 </vcl-tether>
+<div *ngIf="open && layer" class="vclLayerCover" [style.zIndex]="coverZIndex" (click)="close()"></div>
