--- a/demo/app.component.html
+++ b/demo/app.component.html
@@ -7,5 +7,9 @@
   <a [routerLink]="['/layer']">Layer</a>
   <a [routerLink]="['/tether']">Tether</a>
   <a [routerLink]="['/popover']">Popover</a>
+  <a [routerLink]="['/input']">Input</a>
+  <a [routerLink]="['/radio-button']">Radio Button</a>
+  <a [routerLink]="['/checkbox']">Checkbox</a>
+  <a [routerLink]="['/form-control-label']">Form Control Label</a>
 </nav>
 <router-outlet></router-outlet>
