tab-nav + enable layer to use wormhole

--- a/demo/app.component.html
+++ b/demo/app.component.html
@@ -1,3 +1,5 @@
+<vcl-layer-base></vcl-layer-base>
+
 <div class="vclLayoutVertical">
   <header class="">
     <div horizontal="" center="" justified="" layout="">
