--- a/src/components/dropdown/dropdown.component.html
+++ b/src/components/dropdown/dropdown.component.html
@@ -4,14 +4,14 @@
   [attr.tabindex]="tabindex"
   [attr.aria-multiselectable]="maxSelectableItems > 1"
   [attr.aria-expanded]="expanded">
-  <vcl-metalist #metalist [items]="items" [meta]="metaInformation" [maxSelectableItems]="maxSelectableItems" [minSelectableItems]="minSelectableItems">
+  <vcl-metalist (select)="onSelect($event)" #metalist [items]="items" [meta]="metaInformation" [maxSelectableItems]="maxSelectableItems" [minSelectableItems]="minSelectableItems">
     <template let-item="item" let-meta="meta">
       <li class="vclDropdownItem"
         [class.vclSelected]="meta.selected"
         [attr.aria-selected]="meta.selected"
         role="menuitem"
         tabindex="0"
-        (click)="onSelect(item, meta, metalist)">
+        (tap)="selectItem(item, meta, metalist)">
         <div class="vclDropdownItemLabel">
           {{item.label}}
         </div>
