--- a/demo/app.component.html
+++ b/demo/app.component.html
@@ -1,9 +1,9 @@
 <vcl-layer-base></vcl-layer-base>
 
 <div class="vclLayoutVertical">
-  <header class="">
+  <header class="vclToolbar">
     <div horizontal="" center="" justified="" layout="">
-      <h1 class="" style="margin-left: 1em;"> <a href="#" title="to index">ng-vcl Demo</a> </h1>
+      <h1 class="vclNoMargin"> <a href="#" title="to index">ng-vcl Demo</a> </h1>
       <div> <a href="https://github.com/ng-vcl/ng-vcl" target="_blank" title="to Github">
         <span class="vclIcon fa fa-github fa-3x"></span> </a>
       </div>
