Flatten link component

--- a/demo/app.component.html
+++ b/demo/app.component.html
@@ -3,7 +3,7 @@
 <div class="vclLayoutVertical">
   <header class="vclToolbar">
     <div horizontal="" center="" justified="" layout="">
-      <h1 class="vclNoMargin"> <a href="#" title="to index">ng-vcl Demo</a> </h1>
+      <h1 class="vclNoMargin"> <a href="#" title="to index">Angular VCL Demo Browser</a> </h1>
       <div> <a href="https://github.com/ng-vcl/ng-vcl" target="_blank" title="to Github">
         <span class="vclIcon fa fa-github fa-3x"></span> </a>
       </div>
