--- a/demo/components/icon/icon.component.html
+++ b/demo/components/icon/icon.component.html
@@ -1,5 +1,10 @@
-Icon provider based (with icon from the <i>Font Awesome</i> icon font):
-<vcl-icon iconClass="vclIconSize2" icon="fa:cog"></vcl-icon>
+Custom icon (from the <i>Font Awesome</i> icon font):
+<vcl-icon iconClass="vclIconSize2" icon="fa fa-cog fa-2x"></vcl-icon>
+
+<br><br>
+
+Icon provider based (from the <i>Font Awesome</i> icon font):
+<vcl-icon iconClass="vclIconSize2" icon="fa:cog:2x"></vcl-icon>
 
 <br><br>
 
