Use current variant of header html structure

--- a/demo/app.component.html
+++ b/demo/app.component.html
@@ -1,10 +1,13 @@
 <div class="vclLayoutVertical">
-  <header class="vclToolbar">
-    <div horizontal="" center="" justified="" layout="">
-      <h1 class="vclNoMargin"> <a href="#" title="to index">Angular VCL Demo Browser</a> </h1>
-      <div> <a href="https://github.com/ng-vcl/ng-vcl" target="_blank" title="to Github">
-        <span class="vclIcon fa fa-github fa-3x"></span> </a>
-      </div>
+  <header class="vclApplicationHeader vclLayoutHorizontal vclLayoutCenter vclLayoutJustified">
+    <div role="banner">
+      <a href="#" class="vclLayoutHorizontal vclLayoutCenter">
+        <img class="vclResponsiveImage vclLogo" role="presentation" src="https://cdn.rawgit.com/ng-vcl/ng-vcl/master/gfx/angular_vcl.svg">
+        <h1 class="vclAppName">Angular VCL Demo Browser</h1>
+      </a>
+    </div>
+    <div><a href="https://github.com/ng-vcl/ng-vcl" target="_blank" title="to Github">
+      <span class="vclIcon fa fa-github fa-3x"></span> </a>
     </div>
   </header>
   <div class="vclContentArea vclLayoutHorizontal">
