--- a/demo/styles/demo.styl
+++ b/demo/styles/demo.styl
@@ -8,9 +8,12 @@ body
   margin: 0
 
 header
-  margin-top: 0
   padding: 1em
   position: relative
+  &.vclApplicationHeader
+    background-color: var(--gray-light-5)
+    margin: 0
+
 .docMain
   height: 100%
 
