--- a/demo/components/tab/tab.component.html
+++ b/demo/components/tab/tab.component.html
@@ -1,27 +1,60 @@
-<vcl-tab-nav>
+<h3>Default</h3>
+
+<vcl-tab-nav >
   <vcl-tab>
-    <template vcl-tab-label>
-      Tab1
-    </template>
-    <template vcl-tab-content>
-      Content1
-    </template>
+    <template vcl-tab-label>Tab1</template>
+    <template vcl-tab-content>Content1</template>
   </vcl-tab>
   <vcl-tab>
-    <template vcl-tab-label>
-      Tab2
-    </template>
-    <template vcl-tab-content>
-      Content2
-    </template>
+    <template vcl-tab-label>Tab2</template>
+    <template vcl-tab-content>Content2</template>
   </vcl-tab>
-  <vcl-tab [disabled]="true">
-    <template vcl-tab-label>
-      Tab3 disabled
-    </template>
-    <template vcl-tab-content>
-      Content2
-    </template>
+  <vcl-tab [disabled]="true"><template vcl-tab-label>Tab3 disabled</template>
+    <template vcl-tab-content>Content3</template>
   </vcl-tab>
 </vcl-tab-nav>
 
+<hr>
+
+<h3>With layout="right"</h3>
+
+<vcl-tab-nav layout="right" tabContentClass="vclSpan-70p" tabsClass="vclSpan-30p">
+  <vcl-tab>
+    <template vcl-tab-label>Tab1</template>
+    <template vcl-tab-content>Content1</template>
+  </vcl-tab>
+  <vcl-tab>
+    <template vcl-tab-label>Tab2</template>
+    <template vcl-tab-content>Content2</template>
+  </vcl-tab>
+</vcl-tab-nav>
+
+<hr>
+
+<h3>With layout="left"</h3>
+
+<vcl-tab-nav layout="left" tabContentClass="vclSpan-70p" tabsClass="vclSpan-30p">
+  <vcl-tab>
+    <template vcl-tab-label>Tab1</template>
+    <template vcl-tab-content>Content1</template>
+  </vcl-tab>
+  <vcl-tab>
+    <template vcl-tab-label>Tab2</template>
+    <template vcl-tab-content>Content2</template>
+  </vcl-tab>
+</vcl-tab-nav>
+
+<hr>
+
+<h3>With borders=true</h3>
+
+<vcl-tab-nav borders=true>
+  <vcl-tab>
+    <template vcl-tab-label>Tab1</template>
+    <template vcl-tab-content>Content1</template>
+  </vcl-tab>
+  <vcl-tab>
+    <template vcl-tab-label>Tab2</template>
+    <template vcl-tab-content>Content2</template>
+  </vcl-tab>
+</vcl-tab-nav>
