--- a/demo/styles/demo.styl
+++ b/demo/styles/demo.styl
@@ -65,10 +65,10 @@ header
   padding-top: 10px
   margin-left: 1.5em
 
-.docNavHeading a
+.docNav > vcl-navigation > nav > ul > li > a vcl-icon + .vclText
   font-weight: bold !important
 
-.docNavItem > .vclIcogram
+.docNav .vclNavigation li li a
   padding-left: 4.5em !important
 
 .docEditDemoButton
