--- a/styles/app.css
+++ b/styles/app.css
@@ -8964,11 +8964,11 @@ header.vclApplicationHeader {
   margin-left: 1.5em;
 }
 
-.docNavHeading a {
+.docNav > vcl-navigation > nav > ul > li > a vcl-icon + .vclText {
   font-weight: bold !important;
 }
 
-.docNavItem > .vclIcogram {
+.docNav .vclNavigation li li a {
   padding-left: 4.5em !important;
 }
 
