--- a/demo/components/wormhole/wormhole.component.html
+++ b/demo/components/wormhole/wormhole.component.html
@@ -1,7 +1,9 @@
-The wormhole is defined above the hr:
-<template #myFirstWormhole="wormhole" wormhole>
+The wormhole is defined above the hr
+<template generateWormhole #myFirstWormhole="wormhole">
   But is rendered below
 </template>
 <hr>
-<div [connectWormhole]="myFirstWormhole">
+<div [wormhole]="myFirstWormhole">
 </div>
+
+
