up / TOOD: SET BACK VCL-CORE-MODULES TO NPM / UPLOAD MONTH-PICKER TO NPM

--- a/demo/styles/demo.styl
+++ b/demo/styles/demo.styl
@@ -76,3 +76,60 @@ header
 
 code.hljs
   white-space: inherit
+
+
+
+.vclMonthPicker
+  max-width: 24em
+
+
+
+
+  // .vclCalItem
+  //   &.vclAvailable,
+  //   &.vclUnavailable,
+  //   &.vclDisabled,
+  //   &.vclAvailable:hover,
+  //   &.vclUnavailable:hover,
+  //   &.vclDisabled:hover
+  //   &.vclToday,
+  //   &.vclToday:hover,
+  //   &.vclOtherMonth,
+  //   &.vclOtherMonth:hover
+  //     background-color: transparent
+  //     color: inherit
+
+
+
+
+// .vclCalItem.vclOtherMonth,
+// .vclCalItem.vclOtherMonth:hover
+//   color: var(--calendar-otherm-day-color)
+
+// .vclCalItem.vclToday,
+// .vclCalItem.vclToday:hover
+//   font-weight: 500
+//   color: var(--calendar-item-today-color)
+
+// .vclCalItem.vclAvailable,
+// .vclCalItem.vclAvailable:hover
+//   background-color: transparent
+
+// .vclCalItem.vclUnavailable,
+// .vclCalItem.vclUnavailable:hover
+//   background-color: transparent
+
+// .vclCalItem:hover
+//   color: var(--calendar-item-hover-color)
+//   background-color: var(--calendar-item-hover-bg-color)
+
+// .vclCalItem.vclSelected,
+// .vclCalItem.vclSelected:hover
+//   color: var(--calendar-selected-item-color)
+//   background-color: var(--calendar-selected-item-bg-color)
+//   font-weight: 500
+
+// .vclCalItem.vclDisabled,
+// .vclCalItem.vclDisabled:hover
+//   color: var(--calendar-disabled-item-color)
+//   background-color: transparent
