--- a/demo/app.css
+++ b/demo/app.css
@@ -1266,6 +1266,7 @@ span.vclButton[disabled] {
   -webkit-transition: color .25s linear, background-color .25s ease-in-out, border-color .25s ease-in-out;
   transition: color .25s linear, background-color .25s ease-in-out, border-color .25s ease-in-out;
   min-height: 2.5em;
+  outline: 0;
 }
 
 .vclCalendar.vclCalInput {
@@ -1273,6 +1274,7 @@ span.vclButton[disabled] {
      -moz-user-select: none;
       -ms-user-select: none;
           user-select: none;
+  outline: 0;
 }
 
 .vclCalendar.vclCalInput .vclCalItem:hover {
@@ -5994,6 +5996,27 @@ sub {
   border-collapse: collapse;
 }
 
+.vclMonthPicker {
+  min-width: 16em;
+  height: inherit;
+}
+
+.vclMonthPicker.vclClose {
+  display: none;
+}
+
+.vclMonthPicker .vclMonthPickerHeaderLeftCell {
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+}
+
+.vclMonthPicker .vclMonthPickerHeaderRightCell {
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+}
+
 /*!
  *  Font Awesome 4.6.3 by @davegandy - http://fontawesome.io - @fontawesome
  *  License - http://fontawesome.io/license (Font: SIL OFL 1.1, CSS: MIT License)
@@ -8978,4 +9001,8 @@ header.vclApplicationHeader {
 
 code.hljs {
   white-space: inherit;
+}
+
+.vclMonthPicker {
+  max-width: 24em;
 }
